Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1927

Potential race handling ConnectToMaster RPCs during leader transition

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.3.0
    • 1.7.0
    • master, security
    • None

    Description

      MasterServiceImpl::ConnectToMaster currently has a TODO that there might be a case where a client issues the RPC exactly as a leader is becoming active. The worry is that it may return a response indicating LEADER status, but without the ability to issue a key.

      Attachments

        Activity

          People

            aserbin Alexey Serbin
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: